footer margin added on mobile and some other fixes

--- a/master/less/footer.less
+++ b/master/less/footer.less
@@ -3,7 +3,7 @@
 	background-color: #D2D7D3;
 	margin-bottom: 0;
 	width: 100%;
-	height: 50px;
+	min-height: 50px;
 	color: #268AAB;
 	padding-top: 10px;
 }
